@@ -30,6 +30,7 @@ Version 2.3xxx
 - Implemented: Waterflow sensor
 - Implemented: Wind Beaufort scale
 - Implemented: Wind Graph, option to delete a short-log data point
+- Changed: Alert sensor, removed level notation in user interface
 - Changed: EventSystem, don't process unused devices
 - Changed: Fritzbox, Now updating text sensor on connect/disconnect
 - Changed: OpenZWave, Control Panel log starts displaying from the end when entering for the first time
